examples/test_package/Double_dc_full/steps/dpl__forbu_rough_run4/#test_analysis_3_result.txt
### Evaluation Report: ProbLog Bubblesort Implementation

---

#### **1. Document Title**  
**Analysis of ProbLog Bubblesort Implementation and Test Failures**

---

#### **2. Background and Purpose**  
The provided ProbLog code implements a `bubblesort` algorithm to sort a list of integers. The goal is to evaluate the correctness of the implementation, identify any failures, and analyze the root causes of errors. The evaluation focuses on classical Prolog reasoning, recursive termination, and adherence to the functional requirements.

---

#### **3. Test Results Summary**  
The test query `query(forth_sort([3,1,2,5,7,12],X))` resulted in an error:  
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 11:26.
```

**Failed Queries:**  
- `query(forth_sort([3,1,2,5,7,12],X))`  
  - **Expected Result:** `X = [1, 2, 3, 5, 7, 12]`  
  - **Actual Result:** Error due to undefined `->/2` operator.

---

#### **4. Failure Localization**  
- **Error Location:**  
  - Line 11: `(List == SwappedList -> SortedList = List ; bubblesort(SwappedList, SortedList))`  
  - The `->/2` operator is not recognized in the ProbLog context, causing the failure.

- **Affected Predicate:**  
  - `bubblesort/2` (recursive case)  
  - The error occurs because ProbLog does not support the Prolog `->/2` operator for conditional branching.

---

#### **5. Root Cause Analysis**  
- **Classical Prolog Context:**  
  - The `bubblesort` algorithm is logically correct in Prolog, but the use of `->/2` is not compatible with ProbLog.  
  - Recursive termination is ensured for valid inputs (lists of length 0 or 1).

- **ProbLog Context:**  
  - The error arises because ProbLog does not support Prolog's conditional operator `->/2`.  
  - No probabilistic facts or DeepProbLog features are used in this code.

- **DeepProbLog Feature Usage:**  
  - **Report:** "DeepProbLog feature not used."

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met (logically correct but incompatible with ProbLog due to `->/2`).  
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts).  
  - **Neural Network Integration:** Not used.

- **Edge Cases:**  
  - **Non-list Input:** Not handled (e.g., `forth_sort(3, X)` would fail).  
  - **Deep Recursion:** Performance may degrade for very long lists.  
  - **Undefined `expand/2`:** Not applicable here.

---

#### **7. Error Summary**  

| No. | Problem                          | Impact                          | Suggestion                          |
|-----|----------------------------------|----------------------------------|-------------------------------------|
| 1   | Unsupported `->/2` operator      | Conditional branching fails      | Replace `->/2` with ProbLog-compatible logic (e.g., `if_then_else/3`). |
| 2   | Non-list input not handled       | Program crashes                 | Add input validation.               |
| 3   | Deep recursion for large lists   | Performance issues              | Optimize or limit input size.       |

---

#### **Code Fix Suggestion**  
Replace the problematic line with ProbLog-compatible logic:  
```prolog
bubblesort(List, SortedList) :-
    bubble(List, SwappedList),
    (List == SwappedList, SortedList = List ; bubblesort(SwappedList, SortedList)).
```

---

**Word Count:** ~450 words.  
**Tone:** Formal and analytical.  
**Conclusion:** The code fails due to ProbLog's lack of support for Prolog's `->/2` operator. The fix involves replacing it with compatible logic. Edge cases and performance considerations should also be addressed.